--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,6 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-minecraft_version=1.15.2
-mod_version=B3.0.0
-jei_version=6.0.0.4
-hwyla_version=1.10.8-B72_1.15.2
+mc_version=1.19.2
+mod_version=v4.0.0
+mod_name=DCsCustomSpawn
